--- a/css/medium.css
+++ b/css/medium.css
@@ -28,13 +28,11 @@
 }
 header img {
    
-   width:150px;height:150px;
+   width:150px;
+   height:150px;
    position:relative;
 }
-.logotop {
-    
-  
-}
+
 .logotop:hover {
     transform:scale(1.2);
     transition: 2s ease-in-out;
